src/main/java/com/example/stream/spring/courses/reactive/example/model/error/ClassroomDeleteOk.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record ClassroomDeleteOk() implements ClassroomSuccess {
}
